actualizacion registrar libros con manejo multipart

--- a/ApiSpring/apiDamii/src/main/resources/application.properties
+++ b/ApiSpring/apiDamii/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.mail.username=luisito251003@gmail.com
 spring.mail.password=wicwxzxklmiuayxo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+ruta.pdfs=pdfs
+ruta.portadas=portadas 
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
