--- a/ApiSpring/apiDamii/pom.xml
+++ b/ApiSpring/apiDamii/pom.xml
@@ -93,6 +93,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
