--- a/ApiSpring/apiDamii/src/main/resources/application.properties
+++ b/ApiSpring/apiDamii/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8092
 spring.jpa.database=MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/apidamii?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/apidamii?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db4free.net:3306/apidamii
+spring.datasource.username=jhoset
+spring.datasource.password=976975135
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 
