--- a/ApiSpring/apiDamii/.gitignore
+++ b/ApiSpring/apiDamii/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+target/*.jar
+!target/apiDamii-1.0.jar
+
 
 ### STS ###
 .apt_generated
